[package]
name = "cc-wat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "0.1.36", default-features = false }
regex = "1.7.3"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
flate2 = { version = "1.0.25", features = ["zlib-ng"], default-features = false }
serde_with = "2.3.2"
crossbeam-channel = "0.5.8"

[profile.release]
lto = true
